--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 <form class="modal__form" name="add">
                     <input id="name" class="modal__name modal__input" type="text" name="title" placeholder="Title" required />
                     <span id="name-error" class="modal__error">Please fill out this field.</span>
-                    <input id="url" class="modal__about-me modal__input" type="url" name="image-link" placeholder="Image link" required />
+                    <input id="url" class="modal__about-me modal__input" type="url" name="imagelink" placeholder="Image link" required />
                     <span id="url-error" class="modal__error">Please fill out this field.</span>
                     <button class="modal__save" type="submit" name="create">Create</button>
                 </form>
@@ -34,13 +34,33 @@
                 <img class="modal__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" alt="lake louise"/>
                 <p class="modal__footer">The Grand Canyon</p>
             </div>
+            <div class="modal modal_type_confirm">
+                <button class="modal__close" type="button"><img src="<%= require('./images/close-button.svg')%>" alt="white x" /></button>
+                <h3 class="modal__title">Are you sure?</h3>
+                <form class="modal__form" name="delete">
+                    <button class="modal__save" type="submit" name="confirm">Yes</button>
+                </form>
+            </div>
+            <div class="modal modal_type_profile-edit">
+                <button class="modal__close" type="button"><img src="<%= require('./images/close-button.svg')%>" alt="white x" /></button>
+                <h3 class="modal__title">Change Profile Picture</h3>
+                <form class="modal__form" name="change">
+                    <input id="url-profile" class="modal__profile modal__input" type="url" name="profilelink" placeholder="Image link" required />
+                    <span id="url-profile-error" class="modal__error">Please fill out this field.</span>
+                    <button class="modal__save" type="submit" name="replace">Save</button>
+                </form>
+            </div>
             <div class="page__overlay page__overlay_disabled">
                 <header class="header">
                     <img class="logo" src="<%= require('./images/logo.svg')%>" alt="Around the U.S Logo" />
                 </header>
                 <main class="main">
                     <section class="profile">
-                        <img class="profile__image" src="<%= require('./images/profile-image.jpg')%>" alt="old white man with a red hat" />
+                        <div class="profile__edit-container">
+                            <img class="profile__image" src="<%= require('./images/profile-image.jpg')%>" alt="old white man with a red hat" />
+                            <img class="profile__edit" src="<%= require('./images/edit-vector.svg')%>" alt="pencil" />
+                        </div>
+
                         <div class="profile__info">
                             <div class="profile__name-container">
                                 <h1 class="profile__name">Jacques Cousteau</h1>
@@ -57,7 +77,10 @@
                                 <button class="element__image-button" type="button"><img class="element__image" /></button>
                                 <div class="element__title-container">
                                     <h2 class="element__title"></h2>
-                                    <button class="element__like-button" type="button"></button>
+                                       <div class="element__like-container">
+                                          <button class="element__like-button" type="button"></button>
+                                          <span class="element__like-count"></span>
+                                       </div>
                                 </div>
                             </div>
                         </template>
